Closed Bug 287987 Opened 21 years ago Closed 21 years ago

FindProviderFile should continue Enumerating on failed QI

Categories

(Core :: XPCOM, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: Callek, Assigned: Callek)

References

()

Details

Attachments

(1 file, 1 obsolete file)

We should continue enumerating through providers if we fail this QI. FindProviderFile is a callback referenced at lines 623, and 635
Attached patch continue enumerating (obsolete) — — Splinter Review
Assignee: dougt → 116057
Status: NEW → ASSIGNED
Attachment #178770 - Flags: superreview?(darin)
Attachment #178770 - Flags: review?(darin)
Comment on attachment 178770 [details] [diff] [review] continue enumerating or, you could write: if (prov) { // do stuff } to be consistent with the nsIDirectoryServiceProvider2 case up above. hmm... or, maybe we should output a NS_WARNING when the QIs fail.
Attachment #178770 - Flags: superreview?(darin)
Attachment #178770 - Flags: superreview+
Attachment #178770 - Flags: review?(darin)
Attachment #178770 - Flags: review+
Matches the consistency for when we QI to nsIDirectoryServiceProvider2; I opted to leave out NS_WARNING here, since a provider may choose to provide for either nsISimpleEnumerator, nsIFile, or both, and thus, missing the nsIFile case should not spew "warnings" (all imho); Porting r+sr from previous patch, requesting approval.
Attachment #178770 - Attachment is obsolete: true
Attachment #180251 - Flags: superreview+
Attachment #180251 - Flags: review+
Attachment #180251 - Flags: approval1.8b2?
Comment on attachment 180251 [details] [diff] [review] continue enum (consistency) a=asa
Attachment #180251 - Flags: approval1.8b2? → approval1.8b2+
checked in by timeless
Status: ASSIGNED → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: