Bug 287987 FindProviderFile should continue Enumerating on failed QI patch by bugspam.Callek@gmail.com r=darin sr=darin a=asa